syntax = "proto3";
package systemapi_plugin;

option go_package = "github.com/BGrewell/system-api/plugin/api/";

enum RequestType {
    REQUEST_UNKNOWN = 0;
    REQUEST_HEARTBEAT = 1;
    REQUEST_REGISTER = 10;
    REQUEST_EXEC = 20;
}

service Plugin {
    rpc ControlChannel (stream PluginMessage) returns (stream PluginMessage) {}
}

message PluginMessage {
    uint64 request_id = 1;
    string title = 2;
    RequestType request_type = 10;
    oneof request_payload {
        Heartbeat heartbeat = 20;
        Register register = 21;
    }
}

message Heartbeat {
    uint64 beat_id = 1;
}

message Register {
    string plugin_name = 1;
    string route_base = 10;
    repeated string routes = 11;
}